--- a/CursoASPNET/Views/Login/Index.cshtml
+++ b/CursoASPNET/Views/Login/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     Layout = null;
+    ViewData["Tittle"] = "Login";
 }
 <link href="~/css/login.css" rel="stylesheet" /> 
 
@@ -10,15 +11,22 @@
     <h1>Autenticação</h1>
 
 
-    <form action="/Login/Test" method="post">
-        <input type="text" name="email" value="@Model.Email" placeholder="Username/email"/>
-        <input type="password" name="password" value="@Model.Password" placeholder="senha"/>
-        <a href="#">Esqueceu a senha? </a>
+    <form>
+        <input type="email" id="email" name="email" value="@Model.Email" placeholder="Username/email"/>
+        <input type="password" id="password" name="password" value="@Model.Password" placeholder="senha"/>
+        <a href="/Login/Forgot">Esqueceu a senha? </a>
     
         <button type="submit">Login</button>
 
-    <label>Não tem conta?</label> <a href="#">Clique aqui </a>
+    <label>Não tem conta?</label> <a href="/Login/SignUp">Clique aqui </a>
 
     </form>
 
 </section>
+
+
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/jquery/dist/jquery.js"></script>
+<script src="~/js/login.js"></script>
+    
