--- a/CursoASPNET/Views/User/Edit.cshtml
+++ b/CursoASPNET/Views/User/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model CursoASPNET.Models.UserViewModel
+@{
     ViewData["Title"] = "Editar Conta";
 }
 
@@ -9,8 +10,10 @@
     <h2>Editar Conta</h2>
     <hr/>
     <form>
-        <input class="form-control" required id="username" placeholder="Username"/>
-        <input class="form-control" required type="email" id="email" placeholder="E-mail"/>
+        @Html.HiddenFor(o => o.UserId)
+        @Html.HiddenFor(o => o.PersonId)
+        <input value="@Model.UserName" class="form-control" required id="username" placeholder="Username"/>
+        <input value="@Model.Email" class="form-control" required type="email" id="email" placeholder="E-mail"/>
         <input class="form-control" required type="password" id="password" placeholder="Senha"/>
         <input class="form-control" required type="password" id="confirmPassword" placeholder="Confirmar Senha"/>
         <div class="error">
@@ -22,6 +25,7 @@
 </section>
 
 @section Scripts{
+        <script src="~/js/user.js"></script>
         <script>
             changeMenu('user')
         </script>
